# agent-work-harness

./: .gitignore  README.md  pyproject.toml
docs/: adapter-strategy.md  claude-adapter-draft.md  cli-ux.md  distribution-model.md  github-template-strategy.md  product-blueprint.md  roadmap-2026-phase1.md
docs/plans/: 2026-04-05-phase3-export-briefings.md  2026-04-05-phase4-strict-verification.md  2026-04-05-phase5-multi-agent-policy.md
examples/: backend_api.md  dependency_adoption.md  research_or_ml.md  web_app.md
guides/: adoption_levels.md  escalation_rules.md  multi_agent_patterns.md  principles.md
scripts/: new-task.sh  scaffold.sh
src/awh/: __init__.py  cli.py  core.py
templates/repo/: AGENTS.md
templates/repo/docs/: escalation-rules.md  verification-plan.md
templates/repo/docs/tasks/: README.md
templates/task/: contract.md  evidence_manifest.json  feature_list.json  handoff.md  init.sh  loop_contract.md  plan.md  progress.md  qa.md  review.md  roles.md  topology.md
tests/: test_cli.py
