[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-work-harness"
version = "0.1.0"
description = "Portable repo-local harness for coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
awh = "awh.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

